2005-11-02  Egmont Koblinger  <egmont@uhulinux.hu>

	* main.c (directory_history_add): Fix invalid directory preselection on
	cd.

2005-10-08  Pavel Roskin  <proski@gnu.org>

	* man2hlp.c (main): Fix using 0 instead of NULL.

	* widget.c (listbox_fwd): Eliminate forward inline declaration.

2005-10-04  Jindrich Novy  <jnovy@redhat.com>

	* view.c (search): Fix backward regex search off by one.

2005-10-04  Pavel Roskin  <proski@gnu.org>

	* util.c (gettext_ui): Rename to Q_() for glib compatibility,
	move ...
	* glibcompat.c: ... here.  Adjust all callers.

2005-10-03  Pavel Roskin  <proski@gnu.org>

	* screen.c (display_mini_info): Use ngettext().

2005-09-28  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (xmouse_get_event): Catch GPM_DRAG event.
	* mouse.c (enable_mouse, disable_mouse): Update printed escape
	sequence.

2005-09-17  Pavel Tsekov  <ptsekov@gmx.net>

	* execute.c (do_execute): Flush stdout after printing the
	command to be executed.

2005-09-17  Leonard den Ottolander  <leonard den ottolander nl>

	* util.c: Indentation cleanup (function result types on
	different lines then function names).

2005-09-17  Jindrich Novy  <jnovy@redhat.com>

	* file.c (make_symlink): Fix off by one in symlink creation.

2005-09-17  Jindrich Novy  <jnovy@redhat.com>

	* util.c (diff_two_paths): Abort when second symlink can't be
	resolved (fixes segfault).

2005-09-07  Roland Illig  <roland.illig@gmx.de>

	* setup.c: Renamed options[] to int_options[].
	* util.h: Added get_config_string() and set_config_string(),
	which are analogous to get_int() and set_int().
	* util.c: Likewise.
	* setup.c: Replaced the editor_option_backup_ext_int hack with a
	string configuration variable, which allows the backup extension
	to have more than just four characters. Added generic support
	for string options.

2005-09-06  Roland Illig  <roland.illig@gmx.de>

	* cmd.c: Added single_dirsize_cmd(), which computes the size of
	the currently selected panel entry and moves down. Suggested by