@@ -111,14 +111,3 @@ g_strlcpy (gchar       *dest,
 
 #endif				/* GLIB_MAJOR_VERSION < 2 */
 
-#ifndef Q_
-const char *
-Q_ (const char *s)
-{
-    const char *result, *sep;
-
-    result = _(s);
-    sep = strchr(result, '|');
-    return (sep != NULL) ? sep + 1 : result;
-}
-#endif /* ! Q_ */
